# singtown-ai-trainer-classification-keras

./: Dockerfile  README.md  mock-task.json  run.sh
.devcontainer/: devcontainer.json
singtown-ai-trainer-classification-keras/: cache_weight.py  main.py  openmv.py  pyproject.toml
