[project]
name = "singtown-ai-trainer-classification-keras"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.12.0",
    "singtown-ai==1.9.0",
    "tensorflow[and-cuda]==2.20.0",
]

[tool.uv.workspace]
members = [
    "singtown-ai-trainer-classification-keras",
]
